CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_COMPILE_OPTIONS(-fPIC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(pub_run_library stdc++ pthread rt dl)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} jsoncpp_src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_LIBRARY(jsoncpp STATIC ${jsoncpp_src})
TARGET_LINK_LIBRARIES(jsoncpp ${pub_run_library})